--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -97,6 +97,34 @@ span {
     color: #212529;
 }
 
+details.card summary {
+    cursor: pointer;
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+details.card[open] summary::after {
+    content: "▲";
+    font-size: 0.8rem;
+    margin-left: 10px;
+}
+
+details.card:not([open]) summary::after {
+    content: "▼";
+    font-size: 0.8rem;
+    margin-left: 10px;
+}
+
+.card-content {
+    padding: 0 20px 20px 20px;
+}
+
+
 .navigation {
     display: flex;
     flex-direction: column;
@@ -264,6 +292,39 @@ span {
     font-style: italic;
     margin: 8px 0;
 }
+
+/*Gestion des toasts*/
+#toast-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px 0;
+}
+
+/* Style des toasts */
+.toast {
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 8px;
+    font-size: 0.9rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    animation: fadein 0.3s, fadeout 0.3s 3.5s;
+}
+
+/* Animations */
+@keyframes fadein {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes fadeout {
+    from { opacity: 1; transform: translateY(0); }
+    to { opacity: 0; transform: translateY(10px); }
+}
+
+
 
 .tile { 
     aspect-ratio: 1;
